[project]
name = "AI-WebApp-LangChain"
version = "0.1.0"
description = "A project that provides an AI-powered web application using LangChain (via API)."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "docarray>=0.40.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "google-search-results>=2.4.2",
    "scikit-image>=0.22.0",
    "matplotlib>=3.8.4"
    ,"ipywidgets>=8.1.2"
]
